[package]

name = "itevenworks"
version = "0.0.1"
authors = ["Raul Gutierrez S. <rgs@itevenworks.net>"]

[dependencies.nickel]
git = "https://github.com/nickel-org/nickel.rs"

[dependencies.nickel_macros]
git = "https://github.com/nickel-org/nickel.rs"

[dependencies]
getopts = "*"
regex = "*"
rustc-serialize = "*"
